# hydrodataset

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  allfiles.txt  definitions.py  environment-dev.yml  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build.yml  docs.yml  pypi.yml
EStreams/: md5sums.txt
api/bull/: index.html
api/camels_aus/: index.html
api/camels_br/: index.html
api/camels_ch/: index.html
api/camels_cl/: index.html
api/camels_col/: index.html
api/camels_de/: index.html
api/camels_dk/: index.html
api/camels_fi/: index.html
api/camels_fr/: index.html
api/camels_gb/: index.html
api/camels_ind/: index.html
api/camels_lux/: index.html
api/camels_nz/: index.html
api/camels_se/: index.html
api/camels_us/: index.html
api/camelsh/: index.html
api/camelsh_kr/: index.html
api/caravan/: index.html
api/caravan_dk/: index.html
api/estreams/: index.html
api/grdc_caravan/: index.html
api/hydro_dataset/: index.html
api/hydrodataset/: index.html
api/hysets/: index.html
api/lamah_ce/: index.html
api/lamah_ice/: index.html
api/simbi/: index.html
api/standard_variables/: index.html
app/: script_args.py
app/download/: download_daymet.py  download_daymet_basin_unmask.py  download_nldi.py
changelog/: index.html
contributing/: index.html
data/: 01013500_2000__01_01-03_pet_pt.nc
docs/: contributing.md  faq.md  hydrodataset.md  index.md  installation.md  usage.md
docs/api/: bull.md  camels_aus.md  camels_br.md  camels_ch.md  camels_cl.md  camels_col.md  camels_de.md  camels_dk.md  camels_fi.md  camels_fr.md  camels_gb.md  camels_ind.md  camels_lux.md  camels_nz.md  camels_se.md  camels_us.md  camelsh.md  camelsh_kr.md  caravan.md  caravan_dk.md  estreams.md  grdc_caravan.md  hydro_dataset.md  hydrodataset.md  hysets.md  lamah_ce.md  lamah_ice.md  simbi.md  standard_variables.md
docs/source/: conf.py  develop.rst  hydrobench.app.daymet4basins.rst  hydrobench.app.download.rst  hydrobench.app.modis4basins.rst  hydrobench.app.nldas4basins.rst  hydrobench.app.preprocess.rst  hydrobench.app.rst  hydrobench.data.rst  hydrobench.daymet4basins.rst  hydrobench.ecmwf4basins.rst  hydrobench.modis4basins.rst  hydrobench.nldas4basins.rst  hydrobench.pet.rst  hydrobench.rst  hydrobench.utils.rst  index.rst  intro.rst  modules.rst
example/: 01013500.dbf  01013500.shp  01013500.shx  01013500_2000_01_01-03.nc  01013500_2000_01_01-03_nomask.nc  01013500_2000__01_01-03_nomask.nc  01013500_2000__01_01-03_nomask_local_shp.nc  01013500_2000__01_01-03_pet_pt.nc  01031500_2000_01_01-03_nomask.nc  3557basins_ID_NSE_DOR.csv  two_test_basins.dbf  two_test_basins.shp  two_test_basins.shx
examples/: aus_test.py  aus_v2_test.py  read_camels_col.py  read_camels_de.py  read_camels_fr.py  read_camels_gb.py  read_camels_lux.py  read_camelsaus.py  read_camelsbr.py  read_camelsch.py  read_dataset.py  readcamels_aus.py  readcamels_ch.py  readcamels_cl.py  readcamels_col.py  readcamels_de.py  readcamels_dk.py  readcamels_fi.py  readcamels_ind.py  readcamels_lux.py  readcamels_nz.py  readcamels_se.py  readcamels_sk.py  readcamelsh.py  scripts.py
faq/: index.html
hydrobench/data/: data_base.py  data_camels.py  data_daymet4camels.py  stat.py
hydrobench/daymet4basins/: basin_daymet_process.py
hydrobench/ecmwf4basins/: basin_era5_process.py  download_era5_land.py
hydrobench/modis4basins/: DAACDataDownload.py  basin_mod16a2v105_process.py  basin_pmlv2_process.py  readme.md
hydrobench/nldas4basins/: basin_nldas_process.py  download_nldas.py
hydrobench/pet/: meteo_utils.py  pet4daymet.py  rad_utils.py
hydrobench/utils/: hydro_utils.py
hydrodataset/: GRDCCaravan.py  LamaH_CE.py  LamaH_Ice.py  __init__.py  arcade.py  bull.py  camels.py  camels_aus.py  camels_aus_aqua.py  camels_br.py  camels_ccam.py  camels_ch.py  camels_ch_aqua.py  camels_cl.py  camels_cl_aqua.py  camels_col.py  camels_col_aqua.py  camels_de.py  camels_de_aqua.py  camels_deby.py  camels_dk.py  camels_dk_aqua.py  camels_ealstm.py  camels_es.py  camels_fi.py  camels_fi_aqua.py  camels_fr.py  camels_fr_aqua.py  camels_gb.py  camels_gb_aqua.py  camels_ind.py  camels_ind_aqua.py  camels_lux.py  camels_lux_aqua.py  camels_nz.py  camels_nz_aqua.py  camels_se.py  camels_se_aqua.py  camels_series.py  camels_sk.py  (+32 more)
hydrodataset/app/: script_args.py
hydrodataset/climateproj4basins/: basin_nexdcp30_process.py  download_cmip6.py
hydrodataset/data/: data_base.py  data_camels.py  data_daymet4camels.py  data_gages.py  stat.py
hydrodataset/daymet4basins/: basin_daymet_process.py
hydrodataset/ecmwf4basins/: basin_era5_process.py  download_era5_land.py
hydrodataset/modis4basins/: DAACDataDownload.py  EarthdataLoginSetup.py  basin_mod16a2v006_process.py  basin_mod16a2v105_process.py  basin_mod_ssebop_daily_eta_process.py  basin_pmlv2_process.py  get_modis.py
hydrodataset/nldas4basins/: basin_nldas_process.py  download_nldas.py
installation/: index.html
search/: search_index.json
src/: daymet.py
tempnote/: hydrodataset数据库设计说明书.docx
test/: __init__.py  test_camels.py  test_camels_series.py  test_caravan.py  test_download_dataset.py  test_download_daymet.py  test_download_era5_land.py  test_download_nldas.py  test_downloaded_data.py  test_hydrodataset.py  test_multi_datasets.py  test_utils.py
tests/: test_camels.py  test_camels_aqua.py  test_camels_aus.py  test_camels_br.py  test_camels_ccam.py  test_camels_ch.py  test_camels_cl.py  test_camels_de.py  test_camels_dk.py  test_camels_fr.py  test_camels_gb.py  test_camels_ind.py  test_camels_se.py  test_camels_series.py  test_camels_us.py  test_camels_ystl.py  test_camelsaus.py  test_camelsch.py  test_camelsde.py  test_camelsh.py  test_camelshourly.py  test_caravan.py  test_grdc_caravan.py  test_hds_utils.py  test_hysets.py  test_multi_datasets.py  test_unit_conv.py
unified/: idtest.py  readcamels.py  unified_camels.py
usage/: index.html
(+56 files in other folders)
